netwerk/dns/DNSRequestChild.cpp
@@ -87,7 +87,7 @@ ChildDNSRecord::GetNextAddr(uint16_t port, NetAddr *addr)
   memcpy(addr, &mAddresses[mCurrent++], sizeof(NetAddr));
 
   // both Ipv4/6 use same bits for port, so safe to just use ipv4's field
-  addr->inet.port = port;
+  addr->inet.port = htons(port);
 
   return NS_OK;
 }
